--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
-lsi: false
-safe: true
-source: [your repo's top level directory]
-incremental: false
-highlighter: rouge
-gist:
-  noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
+title: Hao Wang
+logo:docs/assets/headshot_circle,png
+description: haw102@pitt.edu | (+1) 412 XXX XXXX
+#show_downloads: true
+theme: jekyil-thene-minimal
