--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hao Wang
-logo:docs/assets/headshot_circle,png
+logo:docs/assets/circled photo.png
 description: haw102@pitt.edu | (+1) 412 XXX XXXX
 #show_downloads: true
 theme: jekyil-thene-minimal
